added working version of service

--- a/user_backend/Dockerfile
+++ b/user_backend/Dockerfile
@@ -18,7 +18,7 @@ FROM alpine AS runner
 
 WORKDIR app
 
-RUN apk add --no-cache curl
+# RUN apk add --no-cache curl
 
 COPY --from=build /build/app ./app
 COPY --from=build /build/cmd/app/config/config.yml ./config.yml
