--- a/user_backend/cmd/app/config/config.yml
+++ b/user_backend/cmd/app/config/config.yml
@@ -3,4 +3,7 @@ http:
 rabbit_mq:
   host:       "broker"
   port:       5672
-  queue_name: "goida"
+  queue_name: "processors_queue"
+redis:
+  addr:       "redis:6379"
+  ttl:        24h
