--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,3 +82,20 @@ services:
     depends_on:
       broker:
         condition: service_healthy
+
+  prometheus:
+    image: prom/prometheus
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+  
+  grafana:
+    image: grafana/grafana
+    environment:
+      - "GF_SECURITY_ADMIN_PASSWORD=admin"
+    ports:
+      - "3000:3000"
+
+volumes:
+  grafana-storage:
